# team35-seniordesign

./: .gitignore  README.md
facial-processing/: .gitignore  IMPLEMENTATION.md  METRICS_EXPLAINED.md  QUICK_START.md  README.md  demo.py  pyproject.toml  requirements.txt
facial-processing/src/: __init__.py
facial-processing/src/api/: __init__.py  server.py
facial-processing/src/core/: __init__.py  config.py  emotion_classifier.py  facial_processor.py  focus_estimator.py  preprocessor.py
facial-processing/src/utils/: __init__.py  logger.py
gen-ai/: .env.example  API_IMPLEMENTATION_PLAN.md  ARTIFACT_INJECTION_GUIDE.md  README.md  __init__.py  config.py  design_doc.md  gateway.py  logging_config.py  purdue_api.py  pyproject.toml  pytest.ini  requirements.txt  run  setup.py  test_injection.py
gen-ai/cli/: __init__.py  main.py  utils.py
gen-ai/cli/commands/: __init__.py  artifact.py  chat.py  config.py  demo.py  ingest.py  query.py  server.py  test.py
gen-ai/diagrams/: compactdiagram  fullactivitydiagram  midsizediagram
gen-ai/plans/: session_rag_implementation.md
gen-ai/prompts/: README.md  artifact_flashcard_template.txt  artifact_insights_template.txt  artifact_mcq_template.txt  chat_system_prompt.md  conversation_context_instructions.md  conversation_summary_building.txt  conversation_summary_prompt.md  conversation_summary_with_content.txt  rag_context_prefix.txt  rag_query_generation.txt  rag_query_template.txt  summary_generation_first.md  summary_generation_with_old.md
gen-ai/src/: gateway.py  purdue_api.py
gen-ai/tests/: __init__.py
(+570 files in other folders)
