[tool.poetry]
name = "genai"
version = "1.0.0"
description = "GenAI subsystem CLI for artifact generation, RAG queries, and chat"
authors = ["Team 35"]
readme = "README.md"
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = ">=2.2.2"
qdrant-client = ">=1.16.0"
httpx = ">=0.25.0"
torch = ">=2.0.0"
transformers = ">=4.30.0"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.0.0"
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
requests = ">=2.31.0"
typer = {extras = ["all"], version = ">=0.9.0"}
rich = ">=13.0.0"

[tool.poetry.scripts]
genai = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


